thanks daniel for helping

--- a/forfyurueecveoment.html
+++ b/forfyurueecveoment.html
@@ -143,7 +143,7 @@
     <div><h1>For future development</h1></div>
 
     <footer>
-        <a href="options.html" tabindex="0">Explore Options</a>
+        <a href="http://127.0.0.1:5500/contaxcy.html" tabindex="0">Explore Options</a>
     </footer>
 </body>
 </html>
